feat: 新增模型热切换
